<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="GVL_IO" Id="{17a654d1-41b2-4912-b579-448a21b8e1bb}">
    <Declaration><![CDATA[VAR_GLOBAL
	(* Digital input A1*)
	i_bLop1				AT %I*		:BOOL;			// I2.1
	i_bLop2				AT %I*		:BOOL;			// I2.2
													// I2.3			Tartalék
	i_bAirOK			AT %I*		:BOOL;			// I2.4
	i_bDoorOpenBtn		AT %I*		:BOOL;			// I2.5
													// I2.6			Tartalék
	i_bDC1OK			AT %I*		:BOOL;			// I2.7
	i_bDC2OK			AT %I*		:BOOL;			// I2.8
	
//	i_bConvejor1OK		AT %I*		:BOOL;			// I2.9			FB-hez linkelve
//	i_bConvejor2OK		AT %I*		:BOOL;			// I2.10		FB-hez linkelve
//	i_bConvejor3OK		AT %I*		:BOOL;			// I2.11		FB-hez linkelve
//	i_bConvejor4OK		AT %I*		:BOOL;			// I2.12		FB-hez linkelve
//	i_bConvejor5OK		AT %I*		:BOOL;			// I2.13		FB-hez linkelve
//	i_bConvejor6OK		AT %I*		:BOOL;			// I2.14		Tartalék
													// I2.15		Tartalék
													// I2.16		Tartalék
	
													// I3.1			Tartalék
													// ...			Tartalék
													// I3.16		Tartalék

	(* Digital input A6*)		//LI+1
	q_bGreenBtnLed		AT %Q*		:BOOL;			// Q11.1
	q_bRedBtnLed		AT %Q*		:BOOL;			// Q11.2
	q_bWhiteBtnLed		AT %Q*		:BOOL;			// Q11.3
													// Q11.4		Tartalék
													// ...			Tartalék
													// Q11.8		Tartalék
	q_bAreaLighting		AT %Q*		:BOOL;			// Q11.9
	q_bLockDoor			AT %Q*		:BOOL;			// Q11.10
													// Q11.11		Tartalék
													// ...			Tartalék
													// Q11.16		Tartalék

	(* Digital input A7*)		//LI+1
													// Q12.1		Tartalék
													// ...			Tartalék
													// Q12.16		Tartalék
	
	(* Digital input A9*)		//LO+1
//	q_bConvejor1On		AT %Q*		:BOOL;			// Q21.1		FB-hez linkelve
//	q_bConvejor2On		AT %Q*		:BOOL;			// Q21.2		FB-hez linkelve
//	q_bConvejor3On		AT %Q*		:BOOL;			// Q21.3		FB-hez linkelve
//	q_bConvejor4On		AT %Q*		:BOOL;			// Q21.4		FB-hez linkelve
//	q_bConvejor5On		AT %Q*		:BOOL;			// Q21.5		FB-hez linkelve
//	q_bConvejor6On		AT %Q*		:BOOL;			// Q21.6		Tartalék
//	q_bStopper1			AT %Q*		:BOOL;			// Q21.7		FB-hez linkelve
//	q_bStopper2			AT %Q*		:BOOL;			// Q21.8		FB-hez linkelve

//	q_bStopper3			AT %Q*		:BOOL;			// Q21.9		FB-hez linkelve
//	q_bStopper4			AT %Q*		:BOOL;			// Q21.10		FB-hez linkelve
//	q_bStopper5			AT %Q*		:BOOL;			// Q21.11		FB-hez linkelve
//	q_bStopper6			AT %Q*		:BOOL;			// Q21.12		FB-hez linkelve
													// Q21.13		Tartalék
													// ...			Tartalék
													// Q11.16		Tartalék
													
	(* Digital input A11*)		//LO+2
//	q_bP1LiftWorkPos	AT %Q*		:BOOL;			// Q31.1		FB-hez linkelve
//	q_bP1LiftBasePos	AT %Q*		:BOOL;			// Q31.2		FB-hez linkelve
//	q_bP2LiftWorkPos	AT %Q*		:BOOL;			// Q31.3		FB-hez linkelve
//	q_bP2LiftBasePos	AT %Q*		:BOOL;			// Q31.4		FB-hez linkelve
													// Q31.5		Tartalék
													// ...			Tartalék
													// Q11.16		Tartalék
													
	(* IOLink A3*)
	(*IOL1*)
//	i_bStopperSensor1	AT %I*		:BOOL;			// IOL 1.0.4	FB-hez linkelve
//	i_bStopperSensor2	AT %I*		:BOOL;			// IOL 1.1.4	FB-hez linkelve
//	i_bStopperSensor3	AT %I*		:BOOL;			// IOL 1.2.4	FB-hez linkelve
//	i_bP1LiftWorkPos	AT %I*		:BOOL;			// IOL 1.3.4	FB-hez linkelve
	i_bP2PalletSensor	AT %I*		:BOOL;			// IOL 1.4.4	P1 és P2 közötti nemkívánatos paletta érzékelése
													// IOL 1.5.4	Tartalék
													// ...			Tartalék
													// IOL 1.7.4	Tartalék

													// IOL 1.0.2	Tartalék
													// IOL 1.1.2	Tartalék
													// IOL 1.2.2	Tartalék
//	i_bP1LiftBasePos	AT %I*		:BOOL;			// IOL 1.3.2	FB-hez linkelve
													// IOL 1.4.2	Tartalék
													// ...			Tartalék
													// IOL 1.7.2	Tartalék
													
	(*IOL2*)
//	i_bStopperSensor4	AT %I*		:BOOL;			// IOL 2.0.4	FB-hez linkelve
//	i_bStopperSensor5	AT %I*		:BOOL;			// IOL 2.1.4	FB-hez linkelve
//	i_bStopperSensor6	AT %I*		:BOOL;			// IOL 2.2.4	FB-hez linkelve
//	i_bP2LiftWorkPos	AT %I*		:BOOL;			// IOL 2.3.4	FB-hez linkelve
	i_bP2DutSensor1		AT %I*		:BOOL;			// IOL 2.4.4	PCB
	i_bP2DutSensor2		AT %I*		:BOOL;			// IOL 2.5.4	Cover
	i_bP2DutSensor3		AT %I*		:BOOL;			// IOL 2.6.4	Carrier
	i_bP2DutSensor4		AT %I*		:BOOL;			// IOL 2.7.4	FAN

													// IOL 2.0.2	Tartalék
													// IOL 2.1.2	Tartalék
													// IOL 2.2.2	Tartalék
//	i_bP2LiftBasePos	AT %I*		:BOOL;			// IOL 2.3.2	FB-hez linkelve
													// IOL 2.4.2	Tartalék
													// ...			Tartalék
													// IOL 2.7.2	Tartalék

	(*IOL3*)
													//				Tartalék
	(*IOL4*)
													//				Tartalék

	(* IOLink A4*)
	(*IOL5*)
//	BNI IOL-801-102-Z037							//	Toronylámpa
	(*IOL6*)
//	BIS014K											//	P1 RFID olvaasó
	(*IOL7*)
//	BIS014K											//	P2 RFID olvaasó
	(*IOL8*)
													//				Tartalék
													
	(* EAP Var *)
	i_bST10_TechEMYStopOn				AT %I*		:BOOL;
	i_bST10_TechEMYStopOn_Quality		AT %I*		:UINT;

	i_bST51_ConveyorReady				AT %I*		:BOOL;			
	i_nST51_ConveyorReady_Quality		AT %I*		:UINT;
	
	q_bST40_ConveyorReady				AT %Q*		:BOOL;			
	q_bST40_TechEMYStopIgnored			AT %Q*		:BOOL;

	q_bST40_Status						AT %Q*		:DWORD;		//	.00			Processz státusz
																//	.01
																//	.02
																//	.03
																//	.04
																//	.05
																//	.06
																//	.07
																//	.08			Hiba
																//	.09			Anyagkifogyás
																//	.10
																//	.11
																//	.12
																//	.13
																//	.14
																//	.15
																//	.16
																//	.17
																//	.18
																//	.19
																//	.20
																//	.21
																//	.22
																//	.23
																//	.24
																//	.25
																//	.26
																//	.27
																//	.28
																//	.29
																//	.30
																//	.31		
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>